// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`popover can specify position as object value 1`] = `
.pf-tippy {
  display: block;
}

<ForwardRef(TippyWrapper)
  a11y={false}
  animateFill={false}
  animation="scale"
  appendTo={[Function]}
  boundary="window"
  className="pf-tippy"
  content={
    <GenerateId
      prefix="pf-random-id-"
    >
      [Function]
    </GenerateId>
  }
  distance={30}
  flip={true}
  hideOnClick={false}
  ignoreAttributes={true}
  inertia={true}
  interactive={true}
  interactiveBorder={0}
  lazy={true}
  maxWidth="calc(1.5rem + 18.75rem)"
  onCreate={[Function]}
  onHidden={[Function]}
  onHide={[Function]}
  onMount={[Function]}
  onShow={[Function]}
  onShown={[Function]}
  placement="right"
  popperOptions={
    Object {
      "modifiers": Object {
        "hide": Object {
          "enabled": true,
        },
        "preventOverflow": Object {
          "enabled": true,
        },
      },
    }
  }
  trigger="manual"
  visible={true}
  zIndex={9999}
>
  <span>
    <div>
      Toggle Popover
    </div>
  </span>
</ForwardRef(TippyWrapper)>
`;

exports[`popover renders close-button, header and body 1`] = `
.pf-tippy {
  display: block;
}

<ForwardRef(TippyWrapper)
  a11y={false}
  animateFill={false}
  animation="scale"
  appendTo={[Function]}
  boundary="window"
  className="pf-tippy"
  content={
    <GenerateId
      prefix="pf-random-id-"
    >
      [Function]
    </GenerateId>
  }
  distance={30}
  flip={true}
  hideOnClick={false}
  ignoreAttributes={true}
  inertia={true}
  interactive={true}
  interactiveBorder={0}
  lazy={true}
  maxWidth="calc(1.5rem + 18.75rem)"
  onCreate={[Function]}
  onHidden={[Function]}
  onHide={[Function]}
  onMount={[Function]}
  onShow={[Function]}
  onShown={[Function]}
  placement="top"
  popperOptions={
    Object {
      "modifiers": Object {
        "hide": Object {
          "enabled": true,
        },
        "preventOverflow": Object {
          "enabled": true,
        },
      },
    }
  }
  trigger="manual"
  visible={true}
  zIndex={9999}
>
  <span>
    <div>
      Toggle Popover
    </div>
  </span>
</ForwardRef(TippyWrapper)>
`;
